--- a/docs/latex/tex/1_Introduccion.tex
+++ b/docs/latex/tex/1_Introduccion.tex
@@ -1,3 +1,42 @@
 \capitulo{1}{Introducción}
 
-Descripción del contenido del trabajo y del estrucutra de la memoria y del resto de materiales entregados.
+A principios de diciembre de 2019, fue la primera de las reuniones con los tutores, a fin de explicar las ideas propias o de barajar la opción de hacer el trabajo de fin de grado en la empresa, ITCL, donde estaba cursando las prácticas extracurriculares. Entre mis ideas estaba hacer un traductor de jeroglíficos o crear una base de datos de los grafittis de la calle. Al final me decanté por hacerlo en la empresa, ya que vi opciones para ello.
+
+La prmera idea de proyecto era hacer un detector de moscas de la fruta. Este primer enfoque, no se llegó a iniciar, debido a que la empresa no estaba participado de una manera fluida y estaba en una fase muy temprana de desarrillo. El inicio de las conversaciones fue a mediados de enero del 2020, y a finales de febrero al no ver esperanzas, búsque otro trabajo entre los disponibles de la plataforma.
+
+La segunda idea del proyecto, si que la comenzé, decicando numerosas horas al desarrollo e investigación, pero acabé dejandola de lado porque no me sentía motivado, ya que se reunierón muchos factores que me bloquearon.
+
+Brevemente, consistia en la implementación de un formulario de login dentro de un nodo de Knime\cite{noauthor_knime_nodate}. , con el fin de poder conectarse a la base de datos de Moodle, recogiendo los datos pertinentes, para hacer mineria de datos, con las herramientas de la aplicación. 
+
+Finalmente a un mes de la entrega para la segunda convocatoria, vi la necesidad de hacerlo, decantandome por una aplicación en Android. Una gran carga de trabajo, en caso de hacer algo que tenga entidad suficiente como para aprobar, pero la idea era intentarlo. Uno de los pasos inciales para comenzar a prograr para estos dispositivos, fue buscar cuéles de los lenguajes de programación actuales son más interesantes para el desarrollo. Pensé en varios candidatos pero finalmente me decante por Flutter, ya que está desarrollado y respaldado por Google.
+
+%% Terminar porque tenemos que explicar más cosas
+
+\section{Estructura de la memoria}\label{estructura-de-la-memoria}
+
+La memoria sigue la siguiente estructura:
+
+\begin{itemize}
+\tightlist
+\item
+  \textbf{Introducción:} breve descripción del problema a resolver y la
+  solución propuesta. Estructura de la memoria y listado de materiales
+  adjuntos.
+\item
+  \textbf{Objetivos del proyecto:} exposición de los objetivos que
+  persigue el proyecto.
+\item
+  \textbf{Conceptos teóricos:} explicación de los conceptos
+  teóricos clave para el entendimiento de la aplicación.
+\item
+  \textbf{Técnicas y herramientas:} listado de técnicas metodológicas y
+  herramientas utilizadas para gestión y desarrollo del proyecto.
+\item
+  \textbf{Aspectos relevantes del desarrollo:} exposición de aspectos
+  destacables que tuvieron lugar durante la realización del proyecto.
+\item
+  \textbf{Conclusiones y líneas de trabajo futuras:} conclusiones
+  obtenidas tras la realización del proyecto y posibilidades de mejora o
+  expansión de la solución aportada.
+\end{itemize}
+
