--- a/docs/latex/memoria.tex
+++ b/docs/latex/memoria.tex
@@ -356,7 +356,10 @@
   }
 \makeatother
 
-\newcommand{\nombre}{Nombre del alumno} %%% cambio de comando
+\newcommand{\nombre}{Samuel Casal Cantero} %%% cambio de comando
+
+%% Comando para el nombre del proyecto
+\newcommand{\tfg}{Flutter} 
 
 % Datos de portada
 \title{Flutter}
@@ -378,11 +381,10 @@
 
 \noindent\includegraphics[width=\textwidth]{cabecera}\vspace{1cm}
 
-\noindent D. nombre tutor, profesor del departamento de nombre departamento, área de nombre área.
-
+\noindent D. José Francisco Diez Pastor y D. Cesár García Osorio. profesores del departamento de Ingeniería IJnformática. área de Lenguajes y Sistemas Informáticos.
 \noindent Expone:
 
-\noindent Que el alumno D. \nombre, con DNI 71301273p, ha realizado el Trabajo final de Grado en Ingeniería Informática titulado título de TFG. 
+\noindent Que el alumno D. \nombre, con DNI 71301273p, ha realizado el Trabajo final de Grado en Ingeniería Informática titulado \tfg. 
 
 \noindent Y que dicho trabajo ha sido realizado por el alumno bajo la dirección del que suscribe, en virtud de lo cual se autoriza su presentación y defensa.
 
@@ -431,7 +433,7 @@ En este primer apartado se hace una \textbf{breve} presentación del tema que se
 
 \renewcommand*\abstractname{Descriptores}
 \begin{abstract}
-Palabras separadas por comas que identifiquen el contenido del proyecto Ej: servidor web, buscador de vuelos, android \ldots
+\emph{Android, Flutter, Dart, VisualStudio Code, Github, ...} 
 \end{abstract}
 
 \clearpage
@@ -444,7 +446,7 @@ A \textbf{brief} presentation of the topic addressed in the project.
 
 \renewcommand*\abstractname{Keywords}
 \begin{abstract}
-keywords separated by commas.
+\emph{Android, Flutter, Dart, VisualStudio Code, Github, ...}
 \end{abstract}
 
 \clearpage
@@ -472,6 +474,6 @@ keywords separated by commas.
 
 
 \bibliographystyle{plain}
-\bibliography{bibliografia}
+\bibliography{biblio}
 
 \end{document}
