--- a/docs/latex/tex/2_Objetivos_del_proyecto.tex
+++ b/docs/latex/tex/2_Objetivos_del_proyecto.tex
@@ -1,3 +1,32 @@
 \capitulo{2}{Objetivos del proyecto}
 
-Este apartado explica de forma precisa y concisa cuales son los objetivos que se persiguen con la realización del proyecto. Se puede distinguir entre los objetivos marcados por los requisitos del software a construir y los objetivos de carácter técnico que plantea a la hora de llevar a la práctica el proyecto.
+%% Comentario de la plantilla
+%%Este apartado explica de forma precisa y concisa cuales son los objetivos que se persiguen con la realización del proyecto. Se puede distinguir entre los objetivos marcados por los requisitos del software a construir y los objetivos de carácter técnico que plantea a la hora de llevar a la práctica el proyecto.
+
+A continuación, se detallarán los objetivos que han motivado la realización de este proyecto así como los resultados que se desean conseguir.
+
+\section{Objetivos generales}
+\begin{itemize}
+	\item Desarrollar una aplicación para \emph{smartphone}.
+	\item Implemenación y despliegue de la aplicación en la tienda de apps.
+	\item Hacer que los usuarios pasen un buen rato.
+\end{itemize}
+
+\section{Objetivos técnicos}
+\begin{itemize}
+	\item Aprender una alternativa moderna a javascript mediante Dart.
+	\item Comprender el funcionamiento de Flutter.
+	\item Control de versiones con la herramienta GitHub, mediante comandos a través de GitBash.
+	\item Generar documentación de todo el proceso en \LaTeX.
+	\item Realizar una planificación mediante \emph{Scrum} eficiente, mediante la herramienta ZenHub, integrada en GitHub.
+	\item Comunicación de la aplicación mediante WebServices.
+	
+\end{itemize}
+
+\section{Objetivos personales}
+\begin{itemize}
+	\item Adquirir el conocimiento necesario para desarrollar aplicaciones móviles y multiplataforma.
+	\item Aprobar el trabajo de fin de grado.
+	\item Estudiar como generar documentación en \LaTeX.
+	\item Aprender que sin esfuerzo no hay recompensa.
+\end{itemize}
