--- a/docs/latex/anexos.tex
+++ b/docs/latex/anexos.tex
@@ -351,9 +351,9 @@
 
 
 % Datos de portada
-\title{título del TFG \\Documentación Técnica}
-\author{nombre alumno}
-\tutor{nombre tutor}
+\title{Flutter \\Documentación Técnica}
+\author{Samuel Casal Cantero}
+\tutor{José Francisco Diez Pastor y Cesár García Osorio}
 \date{\today}
 
 \begin{document}
