--- a/docs/latex/tex/A_Plan_proyecto.tex
+++ b/docs/latex/tex/A_Plan_proyecto.tex
@@ -1,8 +1,36 @@
 \apendice{Plan de Proyecto Software}
 
 \section{Introducción}
+En este apartao trabajaremos sobre la planificación del proyecto, de tal manera que se pueda definir, identificar y programar las actividades específicas que se requieren para realizar las tareas del mismo. 
+
+La evolución temporal es una de las partes más importantes de todo el proceso de desarollo, ya que una mala planificación, puede hacer que el proyecto sufra retrasos, de tal manera, que no se llegue a la fecha de entrega prevista, lo que supone un coste, en este caso, el suspenso, pero también el económico, por las horas y recursos destinados a tal fin.
+
+ En esta fase es muy importante que para cada una de las tareas sepamos el tiempo que durará apriximadamente, quien es el encargado de hacer la tarea y el dinero que supone realizarla. Por lo que invertir tiempo en la estimación de las horas cada una de las tareas, ayuda a identificar las irregularidades en el futuro.
+
+La viabilidad pone el foco en el coste ecónomico del proyecto como de la parte legal. Es decir, es un reactivo limitante, sobre todo el coste.
 
 \section{Planificación temporal}
+El método de trabajo para hacer el seguimiento y la planificación del mismo es Scrum, que pretene realizar una gestión ágil del proyecto. Se basa en \emph{spints}, la duración de estos suele rondar entre los siete y quintce días. Dependiendo de los requisitos del proyecto, número de integrantes y del tiempo disponible, se maneja esta horquilla temporal, en mi caso por la falta de tiempo, decidí hacerlos de 5 días. 
+
+Estos \emph{sprints} se basan en una reunión donde se ponen todas las tareas que se tiene como objetivo realizar, en mi caso eran las reuniones con los tutores del trabajo de fin de grado. Además cada día se tiene que hacer el \emph{daily meetting}, pero como el proyecto es unipersonal, no es necesario. Por lo que se puede afirmar que se ha seguido la filosofía ágil.
+
+Todo ello esta integrado en un proceso incremental de desarrollo del producto, ya que en cada uno de los \emph{spirnts} se producen las mejoras planificadas.
+
+Aclarar que la estimación del tiempo se realiza mediante los \emph{story points}, que indican que tan grande es la tarea a realizar. Esta herramienta nos la aporta ZenHub, con la siguiente relación según el coste temporal:
+
+\tablaSmall{Equivalencias \emph{Story Points} y tiempo estimado}{c c }{StoryPoints/tiempo}
+{ \multicolumn{1}{l}{Story Points} & Estimación temporal \\}{ 
+	1            & 1 hora              \\ 
+	2            & 2 horas           \\ 
+	3            & 3 horas             \\ 
+	4            & 4 horas           \\ 
+	5            & 5 horas             \\ 
+	6            & 6 horas           \\ 
+	7            & 7 horas             \\ 
+	8            & 8 horas             \\ 
+	9            & 9 horas             \\ 
+}
+
 
 \section{Estudio de viabilidad}
 
