--- a/docs/latex/tex/A_Plan_proyecto.tex
+++ b/docs/latex/tex/A_Plan_proyecto.tex
@@ -32,6 +32,8 @@ Aclarar que la estimación del tiempo se realiza mediante los \emph{story points
 }
 
 
+
+Control
 \section{Estudio de viabilidad}
 
 \subsection{Viabilidad económica}
