--- a/docs/latex/tex/A_Plan_proyecto.tex
+++ b/docs/latex/tex/A_Plan_proyecto.tex
@@ -1,22 +1,22 @@
 \apendice{Plan de Proyecto Software}
 
 \section{Introducción}
-En este apartao trabajaremos sobre la planificación del proyecto, de tal manera que se pueda definir, identificar y programar las actividades específicas que se requieren para realizar las tareas del mismo. 
+En este apartado trabajaremos sobre la planificación del proyecto, de tal manera que se pueda definir, identificar y programar las actividades específicas que se requieren para realizar las tareas del mismo. 
 
 La evolución temporal es una de las partes más importantes de todo el proceso de desarollo, ya que una mala planificación, puede hacer que el proyecto sufra retrasos, de tal manera, que no se llegue a la fecha de entrega prevista, lo que supone un coste, en este caso, el suspenso, pero también el económico, por las horas y recursos destinados a tal fin.
 
- En esta fase es muy importante que para cada una de las tareas sepamos el tiempo que durará apriximadamente, quien es el encargado de hacer la tarea y el dinero que supone realizarla. Por lo que invertir tiempo en la estimación de las horas cada una de las tareas, ayuda a identificar las irregularidades en el futuro.
+ En esta fase es muy importante que para cada una de las tareas sepamos el tiempo que durará aproximadamente, quien es el encargado de hacer la tarea y el dinero que supone hacerla. Por lo que invertir tiempo en la estimación de las horas cada una de las tareas, ayuda a identificar las irregularidades en el futuro.
 
-La viabilidad pone el foco en el coste ecónomico del proyecto como de la parte legal. Es decir, es un reactivo limitante, sobre todo el coste.
+La viabilidad pone el foco en el coste económico del proyecto como de la parte legal. Es decir, es un reactivo limitante, sobre todo el coste.
 
 \section{Planificación temporal}
-El método de trabajo para hacer el seguimiento y la planificación del mismo es Scrum, que pretene realizar una gestión ágil del proyecto. Se basa en \emph{spints}, la duración de estos suele rondar entre los siete y quintce días. Dependiendo de los requisitos del proyecto, número de integrantes y del tiempo disponible, se maneja esta horquilla temporal, en mi caso por la falta de tiempo, decidí hacerlos de 5 días. 
+El método de trabajo para hacer el seguimiento y la planificación del mismo es Scrum, que pretende realizar una gestión ágil del proyecto. Se basa en \emph{spints}, la duración de estos suele rondar entre los siete y quince días. Dependiendo de los requisitos del proyecto, número de integrantes y del tiempo disponible, se maneja esta horquilla temporal, en mi caso por la falta de tiempo, decidí hacerlos de 5 días. 
 
 Estos \emph{sprints} se basan en una reunión donde se ponen todas las tareas que se tiene como objetivo realizar, en mi caso eran las reuniones con los tutores del trabajo de fin de grado. Además cada día se tiene que hacer el \emph{daily meetting}, pero como el proyecto es unipersonal, no es necesario. Por lo que se puede afirmar que se ha seguido la filosofía ágil.
 
 Todo ello esta integrado en un proceso incremental de desarrollo del producto, ya que en cada uno de los \emph{spirnts} se producen las mejoras planificadas.
 
-Aclarar que la estimación del tiempo se realiza mediante los \emph{story points}, que indican que tan grande es la tarea a realizar. Esta herramienta nos la aporta ZenHub, con la siguiente relación según el coste temporal:
+Aclarar que la estimación del tiempo se realiza mediante los \emph{story points}, que indican la complejidad de la tarea a realizar. Esta herramienta nos la aporta ZenHub, con la siguiente relación según el coste temporal:
 
 \tablaSmall{Equivalencias \emph{Story Points} y tiempo estimado}{c c }{StoryPoints/tiempo}
 { \multicolumn{1}{l}{Story Points} & Estimación temporal \\}{ 
@@ -31,9 +31,33 @@ Aclarar que la estimación del tiempo se realiza mediante los \emph{story points
 	9            & 9 horas             \\ 
 }
 
+Algo que define mucho la duración de los \emph{sprints} a 5 días, es porque el proyecto en el que estaba, no me funcionaba y al final decidí por hacer este otro. Esto implica tener mayor cantidad de \emph{sprints}, con un incremento del aplicación mayor, ya que el margen temporal hasta la entrega era de un mes. 
+
+A continuación se detallan cada uno de los \emph{sprints} realizados durante el proyecto:
+
+\subsection{Sprint 1 (22/06/20 - 26/096/20)}\label{sprint-1-220620---260620}
+
+El inicio del proyecto fue a través de correo, explicando la situación a mis tutores, de que lo que estaba haciendo no me funcionaba, que estaba verde y que si cabía la posibilidad de hacer otro trabajo. Me dieron el visto bueno, pero que tenía que hacer algo diferenciador, ya que no vale cualquier cosa. Por lo que en la reunión de cierre de \emph{sprint} se comentaría como centrar la aplicación. 
+
+Entonces debido a la escasez temporal, me decido a hacer una aplicación en \emph{Flutter}, ya que se puede hacer algo de calidad de manera ágil.
+
+Los objetivos en este \emph{sprint} inicial fueron:
+
+\begin{itemize}
+\item Documentar como hacer aplicaciones en \emph{Flutter}.
+\item Cursar un curso en \href{https://www.udemy.com/course/flutter-primeros-pasos/}{Udemy}
+\item Crear el repositorio.
+\item Implementar el cuerpo de la aplicación.
+\item Investigar sobre \emph{apis} que ofrece el \emph{framework}.
+\end{itemize}
+
+Todas las \emph{issues} realizadas para este \emph{sprint}, están disponibles en \href{https://github.com/scc0034/flutter_serpiente/milestone/1?closed=1}{Sprint 1}
+
+La estimación fue de 54 horas, pero que finalmente se destinaron 45,5 horas, debido en gran parte a la reutilización de código del curso, aunque el curso me duró más de lo estimado.
+
+\imagen{burndowns/sp1.png}{Sprint 1.}
 
 
-Control
 \section{Estudio de viabilidad}
 
 \subsection{Viabilidad económica}
