--- a/docs/latex/bibliografiaAnexos.bib
+++ b/docs/latex/bibliografiaAnexos.bib
@@ -1,15 +1,24 @@
-@book{koza92,
-		author    = "Koza, John R.",
-		title     = "Genetic Programming: On the Programming of Computers by Means of Natural Selection",
-		publisher = "MIT Press",
-		year      = "1992"
+
+@misc{noauthor_notitle_nodate
 }
 
+@misc{noauthor_knime_nodate,
+	title = {{KNIME} {\textbar} {Open} for {Innovation}},
+	url = {https://www.knime.com/},
+	urldate = {2020-06-26},
+	file = {KNIME | Open for Innovation:C\:\\Users\\Samuel Casal Cantero\\Zotero\\storage\\RSZLGKBP\\www.knime.com.html:text/html}
+}
 
-@misc{ wiki:latex,
-       author = "Wikipedia",
-       title = "LaTeX --- Wikipedia{,} La enciclopedia libre",
-       year = "2015",
-       url = "https://es.wikipedia.org/w/index.php?title=LaTeX&oldid=84209252",
-       note = "[Internet; descargado 30-septiembre-2015]"
+@misc{noauthor_freelancercom_2020,
+	title = {Freelancer.com},
+	copyright = {Creative Commons Attribution-ShareAlike License},
+	url = {https://es.wikipedia.org/w/index.php?title=Freelancer.com&oldid=124679303},
+	abstract = {Freelancer.com es una bolsa de trabajo en línea en la que se pueden solicitar servicios de diferentes ramas, destinado a la pequeña y mediana empresa. La empresa tiene su sede en Sídney (Australia) y fue fundada en 2009 por Matt Barrie.[1]​ La compañía también cuenta con oficinas en Londres, Buenos Aires, Manila y Yakarta.},
+	language = {es},
+	urldate = {2020-07-01},
+	journal = {Wikipedia, la enciclopedia libre},
+	month = mar,
+	year = {2020},
+	note = {Page Version ID: 124679303},
+	file = {Snapshot:C\:\\Users\\Samuel Casal Cantero\\Zotero\\storage\\5YIVDVM9\\index.html:text/html}
 }
