--- a/docs/latex/tex/A_Plan_proyecto.tex
+++ b/docs/latex/tex/A_Plan_proyecto.tex
@@ -60,7 +60,33 @@ La estimación fue de 54 horas, pero que finalmente se destinaron 45,5 horas, de
 
 \section{Estudio de viabilidad}
 
+Es esta parte se pretende analizar el coste / beneficio, como el apartado legal, en todo el proceso de desarrollo, en el caso de que se hubiera tenido que realizar en un entorno real. 
+
+
 \subsection{Viabilidad económica}
+La estructura de mi trabajo, es la de un proyecto con precio cerrado, es decir, no soy un trabajador asalariado, sino autónomo, que recibe un encargo, en este caso por parte de la Universidad. La definición que encaja para esto es la de \emph{freelancer}. Por lo que el coste dependerá de la estimación inicial de las horas del proyecto, incluyendo un porcentaje de beneficios.
+
+Otra de las vías para obtener ingresos es mediante los anuncios que nos ofrece \emph{Google Ad}, a través de diferentes tipos de \emph{banners} y videos, esperamos tener un retorno de dinero. Ya que la idea es que la aplicación este disponible de manera gratuita, en la \emph{play store} para todos aquellos que se la quieran descargar. Aunque esto este disponible, para contabilizar los costes es algo despreciable, ya que es complicado tener una gran repercusión en las primeras etapas de proyecto, o incluso una vez finalizado. 	
+
+\subsubsection{Coste hardware}
+Se desglosa el coste de los dispositivos usados para la implementación, suponiendo que la amortización del pc de sobremesa es aproximadamente de 5 años y de 2 años para el \emph{smartphone}, con la duración del proyecto de 1 mes.
+
+\begin{table}[H]
+	\begin{center}
+		\begin{tabular}{16}
+			\hline
+			Concepto                        & Coste (€) & Coste amortización (€) \\ \hline
+			PC sobremesa				    & 1200      & 20						\\
+			Dispositivo móvil			    & 450       & 18,75						\\ \hline
+			Coste total mensual             & 1558,80  	& 1200						\\ \hline
+		\end{tabular}
+	\end{center}
+\end{table}
+
+\subsubsection{Coste software}
+El coste de los librerías, \emph{cloud services}, entornos de desarrollo, licencias, cursos, máquinas virtuales, entre otros, han sido de uso gratuito, dando lugar a un coste software de 0 euros.
+
+
 
 \subsection{Viabilidad legal}
 
