Final de los costes, mas tema licencias#12

--- a/docs/latex/anexos.tex
+++ b/docs/latex/anexos.tex
@@ -364,6 +364,8 @@
 
 \cleardoublepage
 
+%% Comando para mostrar el header de las tablas en negrita
+\renewcommand\theadfont{\bfseries\sffamily}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
