--- a/docs/latex/tex/A_Plan_proyecto.tex
+++ b/docs/latex/tex/A_Plan_proyecto.tex
@@ -64,7 +64,7 @@ Es esta parte se pretende analizar el coste / beneficio, como el apartado legal,
 
 
 \subsection{Viabilidad económica}
-La estructura de mi trabajo, es la de un proyecto con precio cerrado, es decir, no soy un trabajador asalariado, sino autónomo, que recibe un encargo, en este caso por parte de la Universidad. La definición que encaja para esto es la de \emph{freelancer}. Por lo que el coste dependerá de la estimación inicial de las horas del proyecto, incluyendo un porcentaje de beneficios.
+La estructura de mi trabajo, es la de un proyecto con precio cerrado, es decir, no soy un trabajador asalariado, sino autónomo, que recibe un encargo, en este caso por parte de la Universidad. La definición que encaja para esto es la de \emph{freelancer}. Por lo que el coste dependerá de la estimación inicial de las horas del proyecto, incluyendo un porcentaje de beneficios. En mi caso la estimación inicial de las horas fue de 200 horas.
 
 Otra de las vías para obtener ingresos es mediante los anuncios que nos ofrece \emph{Google Ad}, a través de diferentes tipos de \emph{banners} y videos, esperamos tener un retorno de dinero. Ya que la idea es que la aplicación este disponible de manera gratuita, en la \emph{play store} para todos aquellos que se la quieran descargar. Aunque esto este disponible, para contabilizar los costes es algo despreciable, ya que es complicado tener una gran repercusión en las primeras etapas de proyecto, o incluso una vez finalizado. 	
 
@@ -73,21 +73,106 @@ Se desglosa el coste de los dispositivos usados para la implementación, suponie
 
 \begin{table}[H]
 	\begin{center}
-		\begin{tabular}{16}
+		\begin{tabular}{ccc}
 			\hline
 			Concepto                        & Coste (€) & Coste amortización (€) \\ \hline
 			PC sobremesa				    & 1200      & 20						\\
 			Dispositivo móvil			    & 450       & 18,75						\\ \hline
-			Coste total mensual             & 1558,80  	& 1200						\\ \hline
+			Coste total            	 		&\multicolumn{2}{c} {38,75}				\\ \hline
 		\end{tabular}
+	\caption{Coste hardware}
+	\label{table:costehw}
 	\end{center}
 \end{table}
 
 \subsubsection{Coste software}
 El coste de los librerías, \emph{cloud services}, entornos de desarrollo, licencias, cursos, máquinas virtuales, entre otros, han sido de uso gratuito, dando lugar a un coste software de 0 euros.
 
+\subsubsection{Coste personal}
+El proyecto fue llevado por un solo trabajador, que se encargaba del desarrollo de software y la planificación. El número de horas inicialmente pensado fue de 250 horas, siendo este trabajador autónomo. Se considera el siguiente salario:
 
+\begin{table}[H]
+	\begin{center}
+		\begin{tabular}{cccc}
+			\hline
+			Concepto                        & Precio €/h	& horas		& Coste (€)  	\\ \hline
+			Freelancer					    & 20      		& 250		& 5000			\\ \hline
+	
+		\end{tabular}
+		\caption{Coste personal}
+		\label{table:costepersonal}
+	\end{center}
+\end{table}
+
+En lo referente a las cuotas de la seguridad social, para el año 2020, tenemos que la cuota mínima a pagar es el resultado de aplicar el 30,3\% al salario mínimo interporfesional, que es de 944,4 €, dando lugar a que esta cuota sea de 286,15 €. Dependiendo de la contingencia el desglose es:
+
+\begin{table}[H]
+	\begin{center}
+		\begin{tabular}{ll}
+			\hline
+			Concepto                        	& Coste (€) \\ \hline
+			Salario bruto del trabajador    	& 944,4      \\
+			Contingencias comunes (28,3 \%) 	& 283,2     \\
+			Contingencias profesionales (1,1 \%) & 10,38     \\
+			Cese de actividad (0,8 \%)          & 7,55        \\
+			Formación profesional (0,1 \%)  & 0,94       \\ \hline
+			Coste cuota				            & 286,15 
+		\end{tabular}
+	\caption{Coste cuota de la seguridad social}
+	\label{table:costecuota}
+	\end{center}
+\end{table}
+
+Finalmente vemos que el coste del empleado para este proyecto es de 5286,15 €.
+
+\subsubsection{Costes varios}
+Otros costes que también se deben de tener en cuenta en el proyecto
+
+\begin{table}[H]
+	\begin{center}
+		\begin{tabular}{cc}
+			\hline
+			Concepto                        & Coste (€)  	\\ \hline
+			Internet					    & 50     		\\
+			Cuenta Google Play				& 25			\\ \hline
+			Coste total            	 		&75			\\ \hline
+		\end{tabular}
+		\caption{Coste vario}
+		\label{table:costevario}
+	\end{center}
+\end{table}
+
+\subsubsection{Coste total proyecto}
+El coste total del proyecto es la suma de los costes anteriores, que nos da un importe de 5399,9 €, a esto le tenemos que aplicar el correspondiente incremento del impuesto de valor añadido, que es del 21\%, por lo que el coste total del proyecto es de 6533,9 €.
+
+\subsubsection{Beneficios}
+La idea es que la aplicación se distribuya de manera gratuita a través de la cuenta de \emph{Google Play}, tiene publicidad pero al comienzo de arrancar los beneficios que retornará serán prácticamente nulos.
+
+Por lo que la vía de obtener ingresos como freelance, puede ser incrementar el coste del proyecto por un 15\%, de tal manera que nos podamos asegurar ese beneficio, además de garantizarnos ante un incremento de las horas planificadas, seguir teniendo ese margen de beneficio.
+
+El nuevo coste total del proyecto sería entonces de 6209,89 €, que añadiendo el impuesto de valor añadido, se queda en 7513,96 €.
 
 \subsection{Viabilidad legal}
+
+Para la realización del proyecto se han utilizado multitud de biblioteca de Python de dominio público. A continuación, en la tabla \ref{tabla:Licencias}, se expondrán las principales herramientas utilizadas.
+
+
+\begin{table}%[H]
+	\centering
+	\caption{Licencias de bibliotecas y herramientas utilizadas}
+	\label{tabla:Licencias}
+	\rowcolors {2}{gray!35}{}
+	\begin{tabular}{l l l l}
+		\toprule
+		Librería     & Versión & Descripción                                                     & Licencia                \\ 	\midrule	
+		VsCode        & 1.46.1  & \begin{tabular}[c]{@{}l@{}}Editor de código.\\  \end{tabular} & MIT\\ 
+		Jupyter Notebook & 	6.0.3 & \begin{tabular}[c]{@{}l@{}}Aplicación para el desarrollo de \\código en múltiples lenguajes.\\  \end{tabular} & BSD\\
+		Morris.js    & 0.5.1    & \begin{tabular}[c]{@{}l@{}}Biblioteca para crear\\ gráficos en Javascript y HTML.\end{tabular}                     
+		& MIT \\ \bottomrule
+	\end{tabular}
+\end{table}
+
+Teniendo en cuenta todas estas, la licencia final del proyecto es MIT (Massachusetts Institute Technology) siendo una licencia de uso libre y permitiendo su uso comercial y modificación.
+
 
 
