--- a/docs/latex/tex/A_Plan_proyecto.tex
+++ b/docs/latex/tex/A_Plan_proyecto.tex
@@ -3,35 +3,38 @@
 \section{Introducción}
 En este apartado trabajaremos sobre la planificación del proyecto, de tal manera que se pueda definir, identificar y programar las actividades específicas que se requieren para realizar las tareas del mismo. 
 
-La evolución temporal es una de las partes más importantes de todo el proceso de desarollo, ya que una mala planificación, puede hacer que el proyecto sufra retrasos, de tal manera, que no se llegue a la fecha de entrega prevista, lo que supone un coste, en este caso, el suspenso, pero también el económico, por las horas y recursos destinados a tal fin.
+La evolución temporal es una de las partes más importantes de todo el proceso de desarrollo, ya que una mala planificación, puede hacer que el proyecto sufra retrasos, de tal manera, que no se llegue a la fecha de entrega prevista, lo que supone un coste, en este caso, el suspenso, pero también el económico, por las horas y recursos destinados a tal fin.
 
- En esta fase es muy importante que para cada una de las tareas sepamos el tiempo que durará aproximadamente, quien es el encargado de hacer la tarea y el dinero que supone hacerla. Por lo que invertir tiempo en la estimación de las horas cada una de las tareas, ayuda a identificar las irregularidades en el futuro.
+ En esta fase es muy importante que para cada una de las tareas, sepamos el tiempo que durará aproximadamente, quien es el encargado de hacer la tarea y el dinero que supone hacerla. Por lo que invertir tiempo en la estimación de las horas cada una de las tareas, ayuda a identificar las irregularidades en el futuro.
 
 La viabilidad pone el foco en el coste económico del proyecto como de la parte legal. Es decir, es un reactivo limitante, sobre todo el coste.
 
 \section{Planificación temporal}
-El método de trabajo para hacer el seguimiento y la planificación del mismo es Scrum, que pretende realizar una gestión ágil del proyecto. Se basa en \emph{spints}, la duración de estos suele rondar entre los siete y quince días. Dependiendo de los requisitos del proyecto, número de integrantes y del tiempo disponible, se maneja esta horquilla temporal, en mi caso por la falta de tiempo, decidí hacerlos de 5 días. 
+El método de trabajo para hacer el seguimiento y la planificación del mismo es \emph{Scrum}, que pretende realizar una gestión ágil del proyecto. Se basa en \emph{spints}, la duración de estos suele rondar entre los siete y quince días. Dependiendo de los requisitos del proyecto, número de integrantes y del tiempo disponible, se maneja esta horquilla temporal, en mi caso por la falta de tiempo, decidí hacerlos de 5 días. 
 
-Estos \emph{sprints} se basan en una reunión donde se ponen todas las tareas que se tiene como objetivo realizar, en mi caso eran las reuniones con los tutores del trabajo de fin de grado. Además cada día se tiene que hacer el \emph{daily meetting}, pero como el proyecto es unipersonal, no es necesario. Por lo que se puede afirmar que se ha seguido la filosofía ágil.
+Estos \emph{sprints} se basan en una reunión, donde se planifican todas las tareas que se tiene como objetivo realizar, en mi caso eran las reuniones eran los tutores del trabajo de fin de grado. Además cada día se tiene que hacer el \emph{daily meetting}, pero como el proyecto es unipersonal, no es necesario. Por lo que se puede afirmar que se ha seguido la filosofía ágil.
 
-Todo ello esta integrado en un proceso incremental de desarrollo del producto, ya que en cada uno de los \emph{spirnts} se producen las mejoras planificadas.
+Aclarar que la estimación del tiempo se realiza mediante los \emph{story points}, que indican la complejidad de la tarea a realizar. Esta herramienta nos la aporta ZenHub, con la siguiente relación según el coste temporal, que podemos ver en la siguiente tabla~\ref{tabla:storypoint}
 
-Aclarar que la estimación del tiempo se realiza mediante los \emph{story points}, que indican la complejidad de la tarea a realizar. Esta herramienta nos la aporta ZenHub, con la siguiente relación según el coste temporal:
-
-\tablaSmall{Equivalencias \emph{Story Points} y tiempo estimado}{c c }{StoryPoints/tiempo}
-{ \multicolumn{1}{l}{Story Points} & Estimación temporal \\}{ 
-	1            & 1 hora              \\ 
-	2            & 2 horas           \\ 
-	3            & 3 horas             \\ 
-	4            & 4 horas           \\ 
-	5            & 5 horas             \\ 
-	6            & 6 horas           \\ 
-	7            & 7 horas             \\ 
-	8            & 8 horas             \\ 
-	9            & 9 horas             \\ 
-}
-
-Algo que define mucho la duración de los \emph{sprints} a 5 días, es porque el proyecto en el que estaba, no me funcionaba y al final decidí por hacer este otro. Esto implica tener mayor cantidad de \emph{sprints}, con un incremento del aplicación mayor, ya que el margen temporal hasta la entrega era de un mes. 
+\begin{table}[H]
+	\centering
+	\rowcolors {2}{gray!35}{}
+	\begin{tabular}{l l }
+		\toprule
+		{Story Points} & Estimación temporal \\
+		1            & 1 hora              \\ 
+		2            & 2 horas           \\ 
+		3            & 3 horas             \\ 
+		4            & 4 horas           \\ 
+		5            & 5 horas             \\ 
+		6            & 6 horas           \\ 
+		7            & 7 horas             \\ 
+		8            & 8 horas             \\ 
+		9            & 9 horas             \\ \bottomrule
+	\end{tabular}
+	\caption{Equivalencias \emph{Story Points} y tiempo estimado}
+	\label{tabla:storypoint}
+\end{table}
 
 A continuación se detallan cada uno de los \emph{sprints} realizados durante el proyecto:
 
@@ -64,9 +67,9 @@ Es esta parte se pretende analizar el coste / beneficio, como el apartado legal,
 
 
 \subsection{Viabilidad económica}
-La estructura de mi trabajo, es la de un proyecto con precio cerrado, es decir, no soy un trabajador asalariado, sino autónomo, que recibe un encargo, en este caso por parte de la Universidad. La definición que encaja para esto es la de \emph{freelancer}. Por lo que el coste dependerá de la estimación inicial de las horas del proyecto, incluyendo un porcentaje de beneficios. En mi caso la estimación inicial de las horas fue de 200 horas.
+La estructura de mi trabajo, es la de un proyecto con precio cerrado, es decir, no soy un trabajador asalariado, sino autónomo, que recibe un encargo, en este caso por parte de la Universidad. La definición que encaja para esto es la de \emph{freelancer}~\cite{noauthor_freelancercom_2020}. Por lo que el coste dependerá de la estimación inicial de las horas del proyecto, incluyendo un porcentaje de beneficios. En mi caso la estimación inicial de las horas fue de 250 horas.
 
-Otra de las vías para obtener ingresos es mediante los anuncios que nos ofrece \emph{Google Ad}, a través de diferentes tipos de \emph{banners} y videos, esperamos tener un retorno de dinero. Ya que la idea es que la aplicación este disponible de manera gratuita, en la \emph{play store} para todos aquellos que se la quieran descargar. Aunque esto este disponible, para contabilizar los costes es algo despreciable, ya que es complicado tener una gran repercusión en las primeras etapas de proyecto, o incluso una vez finalizado. 	
+Otra de las vías para obtener ingresos es mediante los anuncios que nos ofrece \emph{Google Ad}, a través de diferentes tipos de \emph{banners} y videos, con los que tener un retorno de dinero. Ya que la idea es que la aplicación este disponible de manera gratuita, en la \emph{play store} para todos aquellos que se la quieran descargar. Aunque esto este disponible, para contabilizar los costes es algo despreciable, ya que es complicado tener una gran repercusión en las primeras etapas de proyecto, o incluso una vez finalizado. 	
 
 \subsubsection{Coste hardware}
 Se desglosa el coste de los dispositivos usados para la implementación, suponiendo que la amortización del pc de sobremesa es aproximadamente de 5 años y de 2 años para el \emph{smartphone}, con la duración del proyecto de 1 mes.
@@ -143,7 +146,7 @@ Otros costes que también se deben de tener en cuenta en el proyecto
 \end{table}
 
 \subsubsection{Coste total proyecto}
-El coste total del proyecto es la suma de los costes anteriores, que nos da un importe de 5399,9 €, a esto le tenemos que aplicar el correspondiente incremento del impuesto de valor añadido, que es del 21\%, por lo que el coste total del proyecto es de 6533,9 €.
+El coste total del proyecto es la suma de los costes anteriores, que nos da un importe de 5399,9 €, a esto le tenemos que aplicar el correspondiente incremento del impuesto de valor añadido, que es~\cite{noauthor_freelancercom_2020} del 21\%, por lo que el coste total del proyecto es de 6533,9 €.
 
 \subsubsection{Beneficios}
 La idea es que la aplicación se distribuya de manera gratuita a través de la cuenta de \emph{Google Play}, tiene publicidad pero al comienzo de arrancar los beneficios que retornará serán prácticamente nulos.
@@ -157,19 +160,24 @@ El nuevo coste total del proyecto sería entonces de 6209,89 €, que añadiendo
 Para la realización del proyecto se han utilizado multitud de biblioteca de Python de dominio público. A continuación, en la tabla \ref{tabla:Licencias}, se expondrán las principales herramientas utilizadas.
 
 
-\begin{table}%[H]
-	\centering
-	\caption{Licencias de bibliotecas y herramientas utilizadas}
-	\label{tabla:Licencias}
+\begin{table}[H]
+	
 	\rowcolors {2}{gray!35}{}
 	\begin{tabular}{l l l l}
 		\toprule
 		Librería     & Versión & Descripción                                                     & Licencia                \\ 	\midrule	
 		VsCode        & 1.46.1  & \begin{tabular}[c]{@{}l@{}}Editor de código.\\  \end{tabular} & MIT\\ 
-		Jupyter Notebook & 	6.0.3 & \begin{tabular}[c]{@{}l@{}}Aplicación para el desarrollo de \\código en múltiples lenguajes.\\  \end{tabular} & BSD\\
-		Morris.js    & 0.5.1    & \begin{tabular}[c]{@{}l@{}}Biblioteca para crear\\ gráficos en Javascript y HTML.\end{tabular}                     
-		& MIT \\ \bottomrule
+		Android Studio & 	4.0 & \begin{tabular}[c]{@{}l@{}}Aplicación para virtualización \\del sistema operativo Android.\\  \end{tabular} & Apache 2.0\\
+		Android R  & 10.0+ Api 30 & \begin{tabular}[c]{@{}l@{}}Versión del S.O \\virtualizado.\\  \end{tabular} & Apache 2.0\\
+		Flutter    & 1.17    & \begin{tabular}[c]{@{}l@{}}Framework con el que se\\ ha desarrollado la app\end{tabular}                     
+		& BSD 3-Clause \\
+		Dart    & 2.2.0    & \begin{tabular}[c]{@{}l@{}}Lenguaje de programación\\ desarrollado por Google\end{tabular}                     
+		& BSD \\
+		Firebase console    & 5.5    & \begin{tabular}[c]{@{}l@{}}Herramienta de Google\\ gestión sercios.\end{tabular}                     
+		& Apache 2.0 \\ \bottomrule
 	\end{tabular}
+	\caption{Licencias de bibliotecas y herramientas utilizadas}
+	\label{tabla:Licencias}
 \end{table}
 
 Teniendo en cuenta todas estas, la licencia final del proyecto es MIT (Massachusetts Institute Technology) siendo una licencia de uso libre y permitiendo su uso comercial y modificación.
