--- a/docs/latex/tex/A_Plan_proyecto.tex
+++ b/docs/latex/tex/A_Plan_proyecto.tex
@@ -38,7 +38,7 @@ Aclarar que la estimación del tiempo se realiza mediante los \emph{story points
 
 A continuación se detallan cada uno de los \emph{sprints} realizados durante el proyecto:
 
-\subsection{Sprint 1 (22/06/20 - 26/096/20)}\label{sprint-1-220620---260620}
+\subsection{Sprint 1 (22/06/20 - 26/06/20)}\label{sprint-1-220620---260620}
 
 El inicio del proyecto fue a través de correo, explicando la situación a mis tutores, de que lo que estaba haciendo no me funcionaba, que estaba verde y que si cabía la posibilidad de hacer otro trabajo. Me dieron el visto bueno, pero que tenía que hacer algo diferenciador, ya que no vale cualquier cosa. Por lo que en la reunión de cierre de \emph{sprint} se comentaría como centrar la aplicación. 
 
@@ -60,6 +60,28 @@ La estimación fue de 54 horas, pero que finalmente se destinaron 45,5 horas, de
 
 \imagen{burndowns/sp1.png}{Sprint 1.}
 
+\subsection{Sprint 2 (27/06/20 - 01/07/20)}\label{sprint-1-270620---010720}
+En este segundo incremento de la aplicación, definimos que el proyecto iba a ser una colección de juegos, que podría usarse como \emph{portfolio}, por lo que los juegos eran nada más que el hilo conductor para tocar el mayor número de herramientas posible. 
+
+Los objetivos planteados fueron:
+\begin{itemize}
+	\item Persistencia de datos, con base de datos local.
+	\item Conectar con firebase para usar la base de datos que proporciona.
+	\item Formulario para recoger las puntuaciones de los jugadores.
+	\item Hacer la ventana que muestra el ranking de los jugadores.
+	\item Avanzar de manera significativa en la memoria.
+	\item Mejorar el juego del snake.
+	\item Implementar la api de login de firebase, mediante Google.
+	\item Google Ad mobile.
+\end{itemize}
+
+Las diferentes \emph{issues} planificadas están en \href{https://github.com/scc0034/flutter_serpiente/milestone/2?closed=1}{Sprint 2}
+
+\imagen{burndowns/sp2.png}{Sprint 2.}
+
+En la reunión del cierre del seguimiento del sprint se muestra la \href{https://github.com/scc0034/flutter_serpiente/releases/tag/V.2.0.0/}{v.2.0.0}, viendo que los objetivos propuesto para este \emph{sprint} se han logrado a excepción de los anuncios, que por diversos motivos no se muestran.
+ 	
+Se estimaron unas 53 horas, pero se acabaron destinando 45 horas que dieron para completar las tareas.
 
 \section{Estudio de viabilidad}
 
