--- a/docs/latex/tex/A_Plan_proyecto.tex
+++ b/docs/latex/tex/A_Plan_proyecto.tex
@@ -179,7 +179,7 @@ El nuevo coste total del proyecto sería entonces de 6209,89 €, que añadiendo
 
 \subsection{Viabilidad legal}
 
-Para la realización del proyecto se han utilizado multitud de biblioteca de Python de dominio público. A continuación, en la tabla \ref{tabla:Licencias}, se expondrán las principales herramientas utilizadas.
+Para el completar el proyecto han sido necesarias gran multitud de herramientas,a continuación, en la tabla \ref{tabla:Licencias}, se expondrán las principales que fueron utilizadas.
 
 
 \begin{table}[H]
@@ -202,7 +202,19 @@ Para la realización del proyecto se han utilizado multitud de biblioteca de Pyt
 	\label{tabla:Licencias}
 \end{table}
 
-Teniendo en cuenta todas estas, la licencia final del proyecto es MIT (Massachusetts Institute Technology) siendo una licencia de uso libre y permitiendo su uso comercial y modificación.
+La licencia es MIT (Massachusetts Institute Technology) siendo una licencia de uso libre y permitiendo su uso comercial y modificación.
 
+\subsubsection{Imágenes y material gráfico}
 
+\begin{table}[H]
+	\begin{center}
+		\begin{tabular}{ccc}
+			\hline
+			Fuente                        & Descripción & Licencia  	\\ \hline
+			Giphy					    & Repositorio de contenido visual  & Open Source   		\\
 
+		\end{tabular}
+		\caption{Fuente del contenido audiovisual}
+		\label{table:fuenteimagenes}
+	\end{center}
+\end{table}
