--- a/docs/latex/tex/D_Manual_programador.tex
+++ b/docs/latex/tex/D_Manual_programador.tex
@@ -1,8 +1,30 @@
 \apendice{Documentación técnica de programación}
 
 \section{Introducción}
+En este anexo se describe la documentación técnica de programación para este proyecto. Incluye los primeros pasos que son la instalación del proyecto, la estructura de la aplicación o finalmente como compilarlo, desplegarlo o los diferentes tipos de configuraciones realizados. La idea es poder facilitar a los futuros desarrolladores una guía con la que poder comenzar, en el caso de que quisieran continuar con el trabajo.
 
 \section{Estructura de directorios}
+El repositorio se encuentra alojado en \href{https://github.com/scc0034/flutter_serpiente}{Github}. La estructura de ficheros que sigue es la siguiente:
+
+\begin{itemize}
+\item \textbf{./}
+Directorio raíz del que cuelgan todas los demás ficheros. Este contiene uno de los fichero más importante
+
+\begin{itemize}
+	\item \textbf{a}: 
+	\item \textbf{b}: 
+	\item \textbf{c}: 
+\end{itemize}
+
+Tambien contiene los siguientes archivos:
+\begin{itemize}
+	\item \textbf{a}: 
+	\item \textbf{b}:
+	\item \textbf{c}:
+\end{itemize}
+
+
+\end{itemize}
 
 \section{Manual del programador}
 
