--- a/docs/latex/tex/A_Plan_proyecto.tex
+++ b/docs/latex/tex/A_Plan_proyecto.tex
@@ -195,6 +195,8 @@ Para el completar el proyecto han sido necesarias gran multitud de herramientas,
 		& BSD 3-Clause \\
 		Dart    & 2.2.0    & \begin{tabular}[c]{@{}l@{}}Lenguaje de programación\\ desarrollado por Google\end{tabular}                     
 		& BSD \\
+		Node.js    & 12.18    & \begin{tabular}[c]{@{}l@{}}Uso de npm\\ \end{tabular}                     
+		& MIT \\
 		Firebase console    & 5.5    & \begin{tabular}[c]{@{}l@{}}Herramienta de Google\\ gestión sercios.\end{tabular}                     
 		& Apache 2.0 \\ \bottomrule
 	\end{tabular}
