--- a/docs/latex/tex/D_Manual_programador.tex
+++ b/docs/latex/tex/D_Manual_programador.tex
@@ -8,7 +8,7 @@ El repositorio se encuentra alojado en \href{https://github.com/scc0034/flutter_
 
 \begin{itemize}
 \item \textbf{./}
-Directorio raíz del que cuelgan todas los demás ficheros. Este contiene uno de los fichero más importante
+Directorio raíz del que cuelgan todas los demás ficheros. Este contiene uno de los archivos más importantes, que es es \emph{pubspec.yalm}. Este archivos se usa para hacer las importaciones de las nuevas funcionalidades que queramos dar a nuestra aplicación.
 
 \begin{itemize}
 	\item \textbf{a}: 
