Añadido el burndown de los anexos closes #37

--- a/docs/latex/tex/A_Plan_proyecto.tex
+++ b/docs/latex/tex/A_Plan_proyecto.tex
@@ -38,7 +38,7 @@ Aclarar que la estimación del tiempo se realiza mediante los \emph{story points
 
 A continuación se detallan cada uno de los \emph{sprints} realizados durante el proyecto:
 
-\subsection{Sprint 1 (22/06/20 - 26/06/20)}\label{sprint-1-220620---260620}
+\subsection{Sprint 1 (22/06/20 - 26/06/20)}\label{sprint-2-220620---260620}
 
 El inicio del proyecto fue a través de correo, explicando la situación a mis tutores, de que lo que estaba haciendo no me funcionaba, que estaba verde y que si cabía la posibilidad de hacer otro trabajo. Me dieron el visto bueno, pero que tenía que hacer algo diferenciador, ya que no vale cualquier cosa. Por lo que en la reunión de cierre de \emph{sprint} se comentaría como centrar la aplicación. 
 
@@ -60,6 +60,7 @@ La estimación fue de 54 horas, pero que finalmente se destinaron 45,5 horas, de
 
 \imagen{burndowns/sp1.png}{Sprint 1.}
 
+%%% SPRINT 2
 \subsection{Sprint 2 (27/06/20 - 01/07/20)}\label{sprint-1-270620---010720}
 En este segundo incremento de la aplicación, definimos que el proyecto iba a ser una colección de juegos, que podría usarse como \emph{portfolio}, por lo que los juegos eran nada más que el hilo conductor para tocar el mayor número de herramientas posible. 
 
@@ -82,6 +83,39 @@ Las diferentes \emph{issues} planificadas están en \href{https://github.com/scc
 En la reunión del cierre del seguimiento del sprint se muestra la \href{https://github.com/scc0034/flutter_serpiente/releases/tag/V.2.0.0/}{v.2.0.0}, viendo que los objetivos propuesto para este \emph{sprint} se han logrado a excepción de los anuncios, que por diversos motivos no se muestran.
  	
 Se estimaron unas 53 horas, pero se acabaron destinando 45 horas que dieron para completar las tareas.
+
+%%%SPRINT 3
+\subsection{Sprint 3 (02/07/20 - 06/07/20)}\label{sprint-3-020720---070720}
+En esta iteración de la aplicación se debía de añadir un juego más para que tenga sentido como una colección de juegos. Se me propuso una idea de juego, que consistía en mover unas tuberías de agua hasta cerrar un circuito. Descarte esa opción a medida que podía explotar la funcionalidad de tener una base de datos en tiempo real, por lo que el juego, al final, fue el cuatro en raya online. Además de la mejora constante del producto.
+
+Los objetivos planificados fueron:
+\begin{itemize}
+	\item Añadir sonidos y música al juego del snake.
+	\item Funcionalidad de las tuberías en el snake.
+	\item Controlar que si hay mejora de puntuación para cada usuario en el snake, pueden hacer un submit con la nueva puntuación.
+	\item Añadir imágenes de medallas al ranking.
+	\item Solucionar el problema de funcionamiento de los anuncios.
+	\item Mejorar el rendimiento del conjunto.
+	\item Crear la interfaz de conexión del cuatro en raya con la base de datos.
+	\item Crear la primera estructura del juego cuatro en raya.
+	\item Realizar las pruebas necesarias para un despliegue de la aplicación en entorno web.
+	\item Solucionar algunos problemas de la play store.
+	\item Continuar con la memoria y anexos.
+\end{itemize}
+
+Las diferentes \emph{issues} se encuentran en \href{https://github.com/scc0034/flutter_serpiente/milestone/3?closed=1}{Sprint 3}
+
+\imagen{burndowns/sp3.png}{Sprint 3.}
+
+Al final en la reunión del cierre de este \emph{Sprint}, con los tutores, quedaba claro que gran parte de las tareas fueron completadas. En cuanto al tema del juego, no se puedo hacer más que la estructura del mismo, pero que para el siguiente, debería de quedar terminado.
+
+En cuanto a las horas que planifique para la documentación de la memoria, solo hice el 17\% de las 12 horas que me propuse. En gran parte fue debido a que destiné algunas más horas a otras tareas o que soy demasiado optimista a la hora de hacer la planificación.
+
+Se estimaron unas 58 horas, pero al final se emplearon 44,5. Todas las tareas se completaron a excepción del despliegue de la aplicación en el entorno web, debido a unos problemas con las compilaciones, y de las 10 horas que sobreestime para la memoria.
+
+\subsection{Sprint 4 (07/07/20 - 10/07/20)}\label{sprint-4-070720---100720}
+La duración de este \emph{Sprint} es de un día menor, porque coincidía el cierre de este en sábado. Por lo que se pasa de los cinco días de duración normal, a cuatro. Lo que se plantea es tener el juego terminado además de añadir un chat que aporte valor añadido.
+
 
 \section{Estudio de viabilidad}
 
