Avace con el manual del programador #60

--- a/docs/latex/memoria.tex
+++ b/docs/latex/memoria.tex
@@ -474,6 +474,6 @@ A \textbf{brief} presentation of the topic addressed in the project.
 
 
 \bibliographystyle{plain}
-\bibliography{biblio}
+\bibliography{bibliografia}
 
 \end{document}
